--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
       </exclusions>
     </dependency>
 
+      <dependency>
+        <groupId>org.twitter4j</groupId>
+        <artifactId>twitter4j-core</artifactId>
+        <version>[4.0,)</version>
+      </dependency>
+
 
   </dependencies>
 
