--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,18 @@
         <version>[4.0,)</version>
       </dependency>
 
+    <dependency>
+      <groupId>io.rest-assured</groupId>
+      <artifactId>json-schema-validator</artifactId>
+      <version>3.0.3</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>java-hamcrest</artifactId>
+      <version>2.0.0.0</version>
+      <scope>compile</scope>
+    </dependency>
 
   </dependencies>
 
