--- a/pom.xml
+++ b/pom.xml
@@ -75,11 +75,12 @@
       </exclusions>
     </dependency>
 
-      <dependency>
-        <groupId>org.twitter4j</groupId>
-        <artifactId>twitter4j-core</artifactId>
-        <version>[4.0,)</version>
-      </dependency>
+    <dependency>
+      <groupId>com.jayway.restassured</groupId>
+      <artifactId>rest-assured</artifactId>
+      <version>2.9.0</version>
+      <scope>test</scope>
+    </dependency>
 
     <dependency>
       <groupId>io.rest-assured</groupId>
